Hide overflow to prevent stretching column

--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,7 @@ input[type="button"] {
   font-family: sans-serif;
   font-size: 20px;
   justify-content: center;
+  overflow: hidden;
 }
 
 .clueLabel {
